[package]
name = "cagra"
version = "0.1.0"
authors = ["Toshiki Teramura <toshiki.teramura@gmail.com>"]
edition = '2018'

description   = "Calculation Graph Library"
documentation = "https://docs.rs/cagra"
repository    = "https://github.com/termoshtt/cagra"
keywords      = ["calculation-graph"]
license       = "MIT"
readme        = "README.md"
categories    = ["algorithms", "science"]

[dependencies]
failure = "0.1"
num-traits = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.petgraph]
version = "0.4"
features = ["serde-1"]

[dependencies.num-complex]
version = "0.2"
features = ["serde"]

[dev-dependencies]
approx = "0.3"
